Fixed conflicts with Master